--- a/index.html
+++ b/index.html
@@ -251,35 +251,35 @@
                     <div class="reviews_wrapp">
                             <div class="owl-carousel owl-theme" id="slider">
 
-                                    <ul class="review_card">
-                                        <li class="review_card__date">25.05.2025</li>
-                                        <li class="review_card__title">Ирина, г. Санкт-Петербург</li>
-                                        <li class="review_card__description">С профессиональным праздником Елена! Желаю процветания и интересных задач, успехов в Вашей публицистической деятельности!</li>
+                                    <ul class="reviews_card">
+                                        <li class="reviews_card__date">25.05.2025</li>
+                                        <li class="reviews_card__title">Ирина, г. Санкт-Петербург</li>
+                                        <li class="reviews_card__description">С профессиональным праздником Елена! Желаю процветания и интересных задач, успехов в Вашей публицистической деятельности!</li>
                                     </ul>
-                                    <ul class="review_card">
-                                        <li class="review_card__date">24.05.2025</li>
-                                        <li class="review_card__title">Анна г. Санкт-Петербург</li>
-                                        <li class="review_card__description">Елена с профессиональным праздником Вас, с днем психолога ! Мы очень-очень-очень благодарны судьбе за то, что Вы появились в нашей жизни. Нам повезло - не пришлось блуждать в поисках своего психолога, ошибаться, разочаровываться, искать снова.</li>
+                                    <ul class="reviews_card">
+                                        <li class="reviews_card__date">24.05.2025</li>
+                                        <li class="reviews_card__title">Анна г. Санкт-Петербург</li>
+                                        <li class="reviews_card__description">Елена с профессиональным праздником Вас, с днем психолога ! Мы очень-очень-очень благодарны судьбе за то, что Вы появились в нашей жизни. Нам повезло - не пришлось блуждать в поисках своего психолога, ошибаться, разочаровываться, искать снова.</li>
                                     </ul>
-                                    <ul class="review_card">
-                                        <li class="review_card__date">23.05.2025</li>
-                                        <li class="review_card__title">Алина г. Санкт-Петербург</li>
-                                        <li class="review_card__description">С профессиональным праздником Елена! Желаю процветания и интересных задач, успехов в Вашей публицистической деятельности!</li>
+                                    <ul class="reviews_card">
+                                        <li class="reviews_card__date">23.05.2025</li>
+                                        <li class="reviews_card__title">Алина г. Санкт-Петербург</li>
+                                        <li class="reviews_card__description">С профессиональным праздником Елена! Желаю процветания и интересных задач, успехов в Вашей публицистической деятельности!</li>
                                     </ul>
-                                    <ul class="review_card">
-                                        <li class="review_card__date">22.05.2025</li>
-                                        <li class="review_card__title">Василий г. Санкт-Петербург</li>
-                                        <li class="review_card__description">С профессиональным праздником Елена! Желаю процветания и интересных задач, успехов в Вашей публицистической деятельности!</li>
+                                    <ul class="reviews_card">
+                                        <li class="reviews_card__date">22.05.2025</li>
+                                        <li class="reviews_card__title">Василий г. Санкт-Петербург</li>
+                                        <li class="reviews_card__description">С профессиональным праздником Елена! Желаю процветания и интересных задач, успехов в Вашей публицистической деятельности!</li>
                                     </ul>
-                                    <ul class="review_card">
-                                        <li class="review_card__date">21.05.2025</li>
-                                        <li class="review_card__title">Петр г. Санкт-Петербург</li>
-                                        <li class="review_card__description">С профессиональным праздником Елена! Желаю процветания и интересных задач, успехов в Вашей публицистической деятельности!</li>
+                                    <ul class="reviews_card">
+                                        <li class="reviews_card__date">21.05.2025</li>
+                                        <li class="reviews_card__title">Петр г. Санкт-Петербург</li>
+                                        <li class="reviews_card__description">С профессиональным праздником Елена! Желаю процветания и интересных задач, успехов в Вашей публицистической деятельности!</li>
                                     </ul>
-                                    <ul class="review_card">
-                                        <li class="review_card__date">20.05.2025</li>
-                                        <li class="review_card__title">Самсон г. Санкт-Петербург</li>
-                                        <li class="review_card__description">С профессиональным праздником Елена! Желаю процветания и интересных задач, успехов в Вашей публицистической деятельности!</li>
+                                    <ul class="reviews_card">
+                                        <li class="reviews_card__date">20.05.2025</li>
+                                        <li class="reviews_card__title">Самсон г. Санкт-Петербург</li>
+                                        <li class="reviews_card__description">С профессиональным праздником Елена! Желаю процветания и интересных задач, успехов в Вашей публицистической деятельности!</li>
                                     </ul>
                               
                             </div>                       
