--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="index.html"><img class="logo__img" src="/dist/images/top_logo.png" alt="logo"></a>
                 </div>
                 <nav class="header_navigate">
-                    <!-- кнопка гамб -->
+                    <!-- кнопка бургера -->
                     <div class="hamb">
                         <div class="hamb__field" id="hamb">
                             <span class="bar"></span> 
@@ -44,20 +44,21 @@
                     </div>
                     <ul class="header_navigate__list" id="menu">
                         <li class="header_navigate__item"><a class="header_navigate__link" href="about.html">Обо мне</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="help.html">Моя помощь</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_help.html">Моя помощь</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="online.html">Онлайн запись</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="reviews.html">Отзывы</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="blogs.html">Статьи</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_blogs.html">Статьи</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="#">Администратор</a></li>
                     </ul>
                 </nav>
+                <!-- бургер меню -->
                 <div class="popup" id="popup">
                     <ul class="header_navigate__list" id="menu">
                         <li class="header_navigate__item"><a class="header_navigate__link" href="about.html">Обо мне</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="help.html">Моя помощь</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_help.html">Моя помощь</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="online.html">Онлайн запись</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="reviews.html">Отзывы</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="blogs.html">Статьи</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_blogs.html">Статьи</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="#">Администратор</a></li>
                     </ul>
                 </div>
@@ -364,10 +365,10 @@
                 <nav class="footer_navigate">
                     <ul class="footer_navigate__list">
                         <li class="footer_navigate__item"><a class="footer_navigate__link" href="about.html">Обо мне</a></li>
-                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="help.html">Моя помощь</a></li>
+                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="all_help.html">Моя помощь</a></li>
                         <li class="footer_navigate__item"><a class="footer_navigate__link" href="online.html">Онлайн запись</a></li>
                         <li class="footer_navigate__item"><a class="footer_navigate__link" href="reviews.html">Отзывы</a></li>
-                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="blogs.html">Статьи</a></li>
+                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="all_blogs.html">Статьи</a></li>
                         <li class="footer_navigate__item"><a class="footer_navigate__link" href="#">Администратор</a></li>
                     </ul>
                 </nav>
@@ -392,5 +393,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./script/owl.carousel.min.js"></script>
     <script src="./script/script.js"></script> 
+    <script src="./script/menu_humb.js"></script> 
 </body>
 </html>
