--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                         </div>
                     </div>
                     <ul class="header_navigate__list" id="menu">
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="about.html">Обо мне</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_about.html">Обо мне</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="all_help.html">Моя помощь</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="online.html">Онлайн запись</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="reviews.html">Отзывы</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_reviews.html">Отзывы</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="all_blogs.html">Статьи</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="#">Администратор</a></li>
                     </ul>
@@ -54,10 +54,10 @@
                 <!-- бургер меню -->
                 <div class="popup" id="popup">
                     <ul class="header_navigate__list" id="menu">
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="about.html">Обо мне</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_about.html">Обо мне</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="all_help.html">Моя помощь</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="online.html">Онлайн запись</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="reviews.html">Отзывы</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_reviews.html">Отзывы</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="all_blogs.html">Статьи</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="#">Администратор</a></li>
                     </ul>
@@ -364,10 +364,10 @@
                 </div>
                 <nav class="footer_navigate">
                     <ul class="footer_navigate__list">
-                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="about.html">Обо мне</a></li>
+                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="all_about.html">Обо мне</a></li>
                         <li class="footer_navigate__item"><a class="footer_navigate__link" href="all_help.html">Моя помощь</a></li>
                         <li class="footer_navigate__item"><a class="footer_navigate__link" href="online.html">Онлайн запись</a></li>
-                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="reviews.html">Отзывы</a></li>
+                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="all_reviews.html">Отзывы</a></li>
                         <li class="footer_navigate__item"><a class="footer_navigate__link" href="all_blogs.html">Статьи</a></li>
                         <li class="footer_navigate__item"><a class="footer_navigate__link" href="#">Администратор</a></li>
                     </ul>
