--- a/all_about.html
+++ b/all_about.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Елена Светличная</title>
-    <link rel="icon" type="image/png" href="images/icons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="/dist/images/icons/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/dist/images/icons/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="stylesheet" href="/dist/css/main.min.css">
 </head>
@@ -32,7 +32,7 @@
                     <a href="index.html"><img class="logo__img" src="/dist/images/top_logo.png" alt="logo"></a>
                 </div>
                 <nav class="header_navigate">
-                    <!-- кнопка гамб -->
+                    <!-- кнопка бургера -->
                     <div class="hamb">
                         <div class="hamb__field" id="hamb">
                             <span class="bar"></span> 
@@ -41,21 +41,22 @@
                         </div>
                     </div>
                     <ul class="header_navigate__list" id="menu">
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="about.html">Обо мне</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="help.html">Моя помощь</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_about.html">Обо мне</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_help.html">Моя помощь</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="online.html">Онлайн запись</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="reviews.html">Отзывы</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="blogs.html">Статьи</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_reviews.html">Отзывы</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_blogs.html">Статьи</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="#">Администратор</a></li>
                     </ul>
                 </nav>
+                <!-- бургер меню -->
                 <div class="popup" id="popup">
                     <ul class="header_navigate__list" id="menu">
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="about.html">Обо мне</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="help.html">Моя помощь</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_about.html">Обо мне</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_help.html">Моя помощь</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="online.html">Онлайн запись</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="reviews.html">Отзывы</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="blogs.html">Статьи</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_reviews.html">Отзывы</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_blogs.html">Статьи</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="#">Администратор</a></li>
                     </ul>
                 </div>
@@ -97,11 +98,11 @@
                 </div>
                 <nav class="footer_navigate">
                     <ul class="footer_navigate__list">
-                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="about.html">Обо мне</a></li>
-                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="help.html">Моя помощь</a></li>
+                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="all_about.html">Обо мне</a></li>
+                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="all_help.html">Моя помощь</a></li>
                         <li class="footer_navigate__item"><a class="footer_navigate__link" href="online.html">Онлайн запись</a></li>
-                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="reviews.html">Отзывы</a></li>
-                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="blogs.html">Статьи</a></li>
+                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="all_reviews.html">Отзывы</a></li>
+                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="all_blogs.html">Статьи</a></li>
                         <li class="footer_navigate__item"><a class="footer_navigate__link" href="#">Администратор</a></li>
                     </ul>
                 </nav>
