--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <ul class="direct_card__wrapp">
                             <li class="direct_card__number"><img src="/dist/images/icons/number_1.png"alt="card_icon"></li>
                             <li class="direct_card__title">Индивидуальна консультация</li>
-                            <li class="direct_card__description">Работаюс внутренним миром и личнымпространством клиента, анализирую егомышление, эмоции и реакции которыевлияют на поступкию Цель индивидуальнойконсультации - устранить прицины иследствия психологических проблемклиента и дать ему правильные ориентиры<li>
+                            <li class="direct_card__description">Работаю с внутренним миром и личным пространством клиента, анализирую его мышление, эмоции и реакции которые влияют на поступкию Цель индивидуальной консультации - устранить прицины иследствия психологических проблем клиента и дать ему правильные ориентиры<li>
                         </ul>  
                         <picture class="direct_card__picture">
                                 <!-- <source type='image/avif' srcset='./image/.avif'>
@@ -179,7 +179,7 @@
                         <ul class="direct_card__wrapp">
                             <li class="direct_card__number"><img src="/dist/images/icons/number_3.png" alt="card_icon"></li>
                             <li class="direct_card__title">Работа с семьями </li>
-                            <li class="direct_card__description">Идеальная семья - это место, где всегда безопасно и комфортно, которое заряжает жизненой энергией и мотивирует на достижения. Если погода в доме испортилась, её нужно улучшать, а не строить новый дом. Помощь кваоифицированного психолога вернет атмосферу тихой гавани, в которую хочется возвращаться</li>
+                            <li class="direct_card__description">Идеальная семья - это место, где всегда безопасно и комфортно, которое заряжает жизненой энергией и мотивирует на достижения. Если погода в доме испортилась, её нужно улучшать, а не строить новый дом. Помощь квалифицированного психолога вернет атмосферу тихой гавани, в которую хочется возвращаться</li>
                         </ul>  
                         <picture class="direct_card__picture">
                             <!-- <source type='image/avif' srcset='./image/.avif'>
