--- a/all_blogs.html
+++ b/all_blogs.html
@@ -10,7 +10,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/dist/images/icons/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="stylesheet" href="/dist/css/main.min.css">
-    <link rel="stylesheet" href="/dist/css/main.min.css">
 </head>
 <body>
     <div class="container">
@@ -78,7 +77,7 @@
                         <span class="article_card__date">25.05.25</span>
                         <h2 class="article_card__title">Как справиться с социофобией</h2>
                         <p class="article_card__descript">Можно ли самостоятельно побороть социофобию или нужно обращаться к специалисту? Когда человек становиться социофобом?</p>
-                        <a class="article__link" href="articles.html">Подробнее</a>
+                        <a class="article_card__link" href="articles.html">Подробнее</a>
                        </div>
                     </div>
                     <div class="article_card">
@@ -91,7 +90,7 @@
                         <span class="article_card__date">25.05.25</span>
                         <h2 class="article_card__title">Витуальный секс - это измена?</h2>
                         <p class="article_card__descript">Что делать если вы узнали что ваш партнер занимается виртуальным сексом.</p>
-                        <a class="article__link" href="articles.html">Подробнее</a>
+                        <a class="article_card__link" href="articles.html">Подробнее</a>
                        </div>
                     </div>
                     <div class="article_card">
@@ -104,7 +103,7 @@
                         <span class="article_card__date">25.05.25</span>
                         <h2 class="article_card__title">Ревную своего мужчину ко всем, что делать в такой ситуации?</h2>
                         <p class="article_card__descript">Узнайте как ревность и плохая самооценка могу разрушить отношения.</p>
-                        <a class="article__link" href="articles.html">Подробнее</a>
+                        <a class="article_card__link" href="articles.html">Подробнее</a>
                        </div>
                     </div>
                     <a class="index_link" href="index.html">На главную</a>
