--- a/articles.html
+++ b/articles.html
@@ -5,7 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Елена Светличная</title>
+    <link rel="icon" type="image/png" href="/dist/images/icons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/dist/images/icons/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link rel="stylesheet" href="/dist/css/main.min.css">
 </head>
 <body>
@@ -20,31 +25,50 @@
                 </div>
                 <div class="header_phone">
                     <img src="/dist/images/icons/phone.png" alt="phone_icon">
-                    <a class="phone_link" href="tel:89104570560"><span class="phone_text">Обратный звонок</span></a>
-                    <span class="phone_number">8(910)457-05-60</span>
+                    <a class="header_phone_link" href="tel:89104570560"><span class="header_phone_text">Обратный звонок</span></a>
+                    <span class="header_phone_number">8(910)457-05-60</span>
                 </div>
             </div>
             <div class="header_bottom">
                 <div class="logo">
-                    <a href="index.html"><img src="/dist/images/top_logo.png" alt="logo"></a>
+                    <a href="index.html"><img class="logo__img" src="/dist/images/top_logo.png" alt="logo"></a>
                 </div>
                 <nav class="header_navigate">
-                    <ul class="header_navigate__list">
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="about.html">Обо мне</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="help.html">Моя помощь</a></li>
+                    <!-- кнопка бургера -->
+                    <div class="hamb">
+                        <div class="hamb__field" id="hamb">
+                            <span class="bar"></span> 
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                        </div>
+                    </div>
+                    <ul class="header_navigate__list" id="menu">
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_about.html">Обо мне</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_help.html">Моя помощь</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="online.html">Онлайн запись</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="reviews.html">Отзывы</a></li>
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="blogs.html">Статьи</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_reviews.html">Отзывы</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_blogs.html">Статьи</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="#">Администратор</a></li>
                     </ul>
                 </nav>
+                <!-- бургер меню -->
+                <div class="popup" id="popup">
+                    <ul class="header_navigate__list" id="menu">
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_about.html">Обо мне</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_help.html">Моя помощь</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="online.html">Онлайн запись</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_reviews.html">Отзывы</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="all_blogs.html">Статьи</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="#">Администратор</a></li>
+                    </ul>
+                </div>
             </div>
         </header>
         <main class="main">
             <div class="message"></div>
             <div class="wrapp">
-                <section class="my_blog">
-                    <h2 class="my_blog__title">Как справиться с социофобией</h2>
+                <section class="my_article">
+                    <h2 class="my_article__title">Как справиться с социофобией</h2>
                     <div class="detail_card">
                         <picture class="detail_card__pic">
                             <!-- <source type='image/avif' srcset='./image/.avif'>
@@ -79,18 +103,17 @@
                         </div>
                        </div>
                     </div>
-    
-                    <a class="index_link" href="blogs.html">Все Статьи</a>
+                    <a class="index_link" href="all_blogs.html">Все Статьи</a>
                 </section>
             </div>
         </main>
         <footer class="footer">
             <div class="footer_top">
                 <div class="footer_wrapp">
-                    <div class="logo">
-                        <a href="index.html"><img class="footer_logo" src="/dist/images/footer_logo.png" alt="logo"></a>
+                    <div class="logo footer_logo">
+                        <a href="index.html"><img class="footer_logo_img" src="/dist/images/footer_logo.png" alt="logo"></a>
                     </div>
-                    <div class="social_wrapp footer_social">
+                    <div class="footer_social">
                         <a class="footer_top__social_link" href="https://vk.com/svetemuzic"><img class="footer_top__social_icons" src="/dist/images/icons/vk.png" alt="vk_icon"></a>
                         <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="/dist/images/icons/telegramm.png" alt="telegram_icon"></a>
                         <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="/dist/images/icons//whatsapp.png" alt="whatsapp_icon"></a>                     
@@ -98,18 +121,18 @@
                 </div>
                 <nav class="footer_navigate">
                     <ul class="footer_navigate__list">
-                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="about.html">Обо мне</a></li>
-                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="help.html">Моя помощь</a></li>
+                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="all_about.html">Обо мне</a></li>
+                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="all_help.html">Моя помощь</a></li>
                         <li class="footer_navigate__item"><a class="footer_navigate__link" href="online.html">Онлайн запись</a></li>
-                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="reviews.html">Отзывы</a></li>
-                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="blogs.html">Статьи</a></li>
+                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="all_reviews.html">Отзывы</a></li>
+                        <li class="footer_navigate__item"><a class="footer_navigate__link" href="all_blogs.html">Статьи</a></li>
                         <li class="footer_navigate__item"><a class="footer_navigate__link" href="#">Администратор</a></li>
                     </ul>
                 </nav>
                 <div class="footer_contacts">
                     <div class="footer_phone">
                         <img src="/dist/images/icons/phone.png" alt="phone_icon">
-                        <a href="tel:89104570560" class="phone_number">8(910)457-05-60</a>
+                        <a href="tel:89104570560" class="footer_phone__number">8(910)457-05-60</a>
                     </div>
                     <div class="email">
                         <img src="/dist/images/icons/mail.png" alt="email_icon">
@@ -124,5 +147,6 @@
             </div>
         </footer>
     </div>
+    <script src="./script/menu_humb.js"></script>
 </body>
 </html>
