ссылки на страницы

--- a/all_blogs.html
+++ b/all_blogs.html
@@ -29,7 +29,7 @@
             </div>
             <div class="header_bottom">
                 <div class="logo">
-                    <a href="index.html"><img class="logo__img" src="/dist/images/top_logo.png" alt="logo"></a>
+                    <a href="index.html"><img class="logo__img" src="/dist/images/logo_header.png" alt="logo"></a>
                 </div>
                 <nav class="header_navigate">
                     <!-- кнопка бургера -->
@@ -114,7 +114,7 @@
             <div class="footer_top">
                 <div class="footer_wrapp">
                     <div class="logo footer_logo">
-                        <a href="index.html"><img class="footer_logo_img" src="/dist/images/footer_logo.png" alt="logo"></a>
+                        <a href="index.html"><img class="footer_logo_img" src="/dist/images/logo_footer.png" alt="logo"></a>
                     </div>
                     <div class="footer_social">
                         <a class="footer_top__social_link" href="https://vk.com/svetemuzic"><img class="footer_top__social_icons" src="/dist/images/icons/vk.png" alt="vk_icon"></a>
