--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <li class="about_right__list_item"> Хочу предложить Вам пройти путь совершенствования вместе. Мои преимущества: 32 года стажа работы с людьми, 15 лет руководитель в сфере музыкального образования, доброжелательна, открыта. </li>
                             <li class="about_right__list_item">В работе опираюсь только на техники и методики с научно доказанной эффективностью.м</li>
                         </ul>
-                        <a class="about_right__link" href="about.html">Подробнее</a>
+                        <a class="about_right__link" href="all_about.html">Подробнее</a>
                     </div>
                 </section>
                 <!-- с чем могу помочь  -->
@@ -143,7 +143,7 @@
                             <li class="card__descrit"><span class="card__text">Индивидуальные консультации для взрослых</span></li>
                         </ul>
                     </div>
-                    <a class="btn my_help__btn" href="help.html">Подробнее</a>
+                    <a class="btn my_help__btn" href="all_help.html">Подробнее</a>
                 </section>
                 <!-- Направления работы -->
                 <section class="direct" id="direct">
@@ -285,7 +285,7 @@
                               
                             </div>                       
                     </div>
-                    <a class="reviews__btn btn" href="reviews.html">Смотреть все отзывы</a>
+                    <a class="reviews__btn btn" href="all_reviews.html">Смотреть все отзывы</a>
                 </section>
             </div>
                 <!-- моё кредо -->
@@ -346,7 +346,7 @@
                             </div>
                         </div>
                     </div>
-                    <a class="blogs__btn btn" href="blogs.html">Смотреть все статьи</a>
+                    <a class="blogs__btn btn" href="all_blogs.html">Смотреть все статьи</a>
                 </section>
             </div>
         </main>
