online type button

--- a/online.html
+++ b/online.html
@@ -72,7 +72,7 @@
                     <input class="form__input_text" type="text" placeholder="Имя" required>
                     <input class="form__input_tel" type="tel" placeholder="8(123)123-45-67" required>
                     <div class="form_wrapp">
-                        <button class="form__btn btn">Оставить заявку</button>
+                        <button type="button" class="form__btn btn">Оставить заявку</button>
                         <p class="form__descript">нажимая на кнопку "оставить заявку", вы подтверждаете свое согласие на обработку <a class="form__link" href="#">пользовательских данных</a></p>
                     </div>
                 </form>
